<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FlashyApp</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="loginpage">Login!</string>
    <string name="login_hint">Enter UserName</string>
    <string name="email_hint">Enter Email</string>
    <string name="password_hint">Enter Password</string>
    <string name="registerpage">Registered</string>
    <string name="deckpage">This is a list of decks</string>
    <string name="title_activity_registration">Registration</string>
    <string name="title_activity_decks_page">DecksPage</string>
    <string name="button_register">Register Now!</string>
    <string name="button_login">Login</string>
    <string name="button_draw">Draw</string>
    <string name="title_activity_view_html">ViewHTML</string>
    <string name="button_new_deck">New Deck</string>
    <string name="title_activity_new_deck">NewDeck</string>
    <string name="new_deck_text">Fill in the Fields to Make a New Deck</string>
    <string name="deck_name_hint">Name of the Deck</string>
    <string name="deck_description_hint">Description of Deck</string>
    <string name="fromList_button_text">Submit the List</string>
    <string name="title_activity_view_deck">ViewDeck</string>
    <string name="deckView_text">A single Deck:</string>
    <string name="flip_over_card">Flip This Card Over</string>
    <string name="flip_next_card">Next</string>
    <string name="flip_prev_card">Previous</string>
    <string name="button_logout">Logout</string>
    <string name="title_activity_my_logout">Logout</string>
    <string name="title_activity_deck_list_maker">List of Decks</string>
    <string name="makePic_string">TakePic</string>
    <string name="button_fromImage">New Photo Deck</string>
    <string name="title_activity_draw_lines">Align Lines To Make Cards</string>
    <string name="title_activity_submit_lines">SubmitLines</string>
	<string name="menuAddRow">Add Row</string>
	<string name="menuDeleteRow">Delete Row</string>
	<string name="menuAddCol">Add Column</string>
	<string name="menuDeleteCol">Delete Column</string>
	<string name="FlashyWord">Flashy</string>
	<string name="menuNewLineDeck">New Deck from Text</string>
	<string name="menuNewPhotoDeck">New Deck from Photo</string>
	<string name="logoutText">Logging out...</string>
	<string name="menuSyncList">Sync List of Decks</string>
	<string name="Sync_deck">Sync This Deck to Match The Website</string>
</resources>